--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
 <script>
 // ── STATE ──────────────────────────────────────────────
 let cfg = {
-  url: '', gemini: '',
+  url: 'https://script.google.com/macros/s/AKfycbxILCGZmlNFrOkfSJwe_DE1QP-kO9hT3Hdx-WE6J5Y6qBzoYr0FQs_Aaj5l_-NdzDoY/exec',
+  gemini: 'DIN_GEMINI_API_NYCKEL_HÄR',
   kcal:2000, prot:150, karb:200, fat:65
 };
 let todayEntries = [];
