--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 // ── STATE ──────────────────────────────────────────────
 let cfg = {
   url: 'https://script.google.com/macros/s/AKfycbxILCGZmlNFrOkfSJwe_DE1QP-kO9hT3Hdx-WE6J5Y6qBzoYr0FQs_Aaj5l_-NdzDoY/exec',
-  gemini: 'DIN_GEMINI_API_NYCKEL_HÄR',
+  gemini: 'AIzaSyDAQGnmZayUOPz6JGaMesUYjuUhkKDLQnY',
   kcal:2000, prot:150, karb:200, fat:65
 };
 let todayEntries = [];
